# HybridBar

./: .SRCINFO  .gitignore  ALIASES.md  CONTRIB.md  Cargo.toml  DUAL-CONFIG.md  EXPERIMENTAL.md  FAQ.md  FEATURES.md  LICENSE  PKGBUILD  PRESETS.md  README.md  SCRIPTING.md  VARIABLES.md  WIDGETS.md  config.json  flake.nix  fleet.toml
.cargo/: config.toml
.github/workflows/: devskim.yml
examples/: config.json  style.css
modules/: clock.jsonc  cpu.jsonc  mpris.jsonc  name.jsonc  network.jsonc  style.css  waka.py
resources/: cava_tmp.conf  test.rn
src/: .ui.rs.rustfmt  button_widget.rs  config.rs  constant_messages.rs  constants.rs  debug.rs  environment.rs  label_widget.rs  loop.rs  macros.rs  main.rs  proc.rs  spacing_widget.rs  structures.rs  style.css  types.rs  ui.rs  widget.rs  widget_builder.rs
src/utils/: aliases.rs  cava.rs  environment.rs  hyprland.rs  math.rs  mod.rs  rune_script.rs  ui_utils.rs
src/utils/rune/: builder_module.rs  hybrid_module.rs  mod.rs  rune_script.rs
src/widgets/: box_widget.rs  button_widget.rs  cava_widget.rs  cmd_widget.rs  label_widget.rs  mod.rs  spacing_widget.rs  tray_widget.rs
