[package]
name = "hybrid-bar"
description = "A simple status bar made for wlroots compositors."
authors = [ "varsity <refined@skiff.com>" ]
readme = "README.md"
repository = "https://github.com/vars1ty/HybridBar"
keywords = [ "hyprland", "wayland", "status-bar", "gtk-layer-shell", "linux" ]
categories = [ "rendering", "gui" ]
version = "0.4.9"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.26.0", features = [ "full" ] }
gtk-layer-shell = "0.6.0"
lazy_static = "1.4.0"
smallvec = "1.10.0"
hyprland = "0.3.0"
lxinfo = "0.1.2"
rune = "0.12.3"
glib = "0.17.5"
json = "0.12.4"
gtk = "0.17.1"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"
